--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -235,7 +235,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
-    // About container (small and medium)
+    // About section (small and medium)
     .about {
         display: flex;
         //padding: 0.5rem;
@@ -341,7 +341,46 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
+    // Experience section (small and medium)
+    .xp {
+        //border: 2px solid red;
+        .xp-title {
+            text-align: center;
+            //border: 2px solid purple;
+            padding: 1rem;
+            h4, h3 {
+                color: $specialColor;
+            }
+            h3 {
 
+            }
+        }
+        .xp-container {
+            text-align: center;
+            border: 2px solid $specialColor;
+            border-radius: 25px;
+            .xp-type{
+                padding: 1rem;
+                font-weight: bold;
+            }
+            .xp-skills-container {
+                //border: 2px solid red;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                .skill-container {
+                    //border: 2px solid green;
+                    h3 {
+                        font-weight: bold;
+                        color: $specialColor;
+                    }
+                    h4 {
+                        font-style: italic;
+                    }
+                }
+            }
+        }
+    }
 }
 
 
