--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,7 +108,9 @@ button {
     justify-content: center;
   }
   .hero .hero__img img {
-    border-radius: 25%;
+    width: 120px;
+    height: 200px;
+    border-radius: 25px;
   }
   .hero .hero__text {
     display: flex;
@@ -253,136 +255,22 @@ button {
   .xp .xp-container .xp-skills-container .skill-container h4 {
     font-style: italic;
   }
-}
-@media (width <= 375px) {
-  .nav__container {
-    display: flex;
-    justify-content: space-around;
-    font-size: 1rem;
-  }
-  .nav__container ul {
-    gap: 0.5rem;
-  }
-  .hero {
-    display: flex;
-    flex-direction: column;
-    margin-top: 4rem;
-    gap: 1rem;
-  }
-  .hero .hero__img {
-    display: flex;
-    justify-content: center;
-  }
-  .hero .hero__img img {
-    width: 120px;
-    height: 150px;
-    border-radius: 25%;
-  }
-  .hero .hero__text {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .hero .hero__text p, .hero .hero__text h2, .hero .hero__text h3 {
-    display: flex;
-    justify-content: center;
-  }
-  .hero .hero__text p {
-    font-size: 1.2rem;
-  }
-  .hero .hero__text h2 {
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  .hero .hero__text p, .hero .hero__text h3 {
-    color: rgba(0, 0, 0, 0.607);
-    font-weight: bold;
-  }
-  .hero .hero__text .hero__btns {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .projects {
     padding: 1rem;
   }
-  .hero .hero__text .hero__btns button {
-    font-size: 1.5rem;
-    padding: 1rem;
-    border-radius: 25px;
-    background-color: rgba(0, 0, 0, 0.755);
-    color: ghostwhite;
-    border: 0;
-  }
-  .hero .hero__text .hero__links {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  .hero .hero__text .hero__links i {
-    font-size: 2rem;
-  }
-}
-@media (width <= 425px) {
-  .nav__container {
-    font-size: 1.5rem;
-  }
-  .nav__container ul {
-    gap: 0.5rem;
-  }
-  .hero {
-    display: flex;
-    flex-direction: column;
-    margin-top: 4rem;
-    gap: 1rem;
-  }
-  .hero .hero__img {
-    display: flex;
-    justify-content: center;
-  }
-  .hero .hero__img img {
-    width: 120px;
-    height: 120px;
-    border-radius: 25%;
-  }
-  .hero .hero__text {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .hero .hero__text p, .hero .hero__text h2, .hero .hero__text h3 {
-    display: flex;
-    justify-content: center;
-  }
-  .hero .hero__text p {
-    font-size: 1.2rem;
-  }
-  .hero .hero__text h2 {
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  .hero .hero__text p, .hero .hero__text h3 {
-    color: rgba(0, 0, 0, 0.607);
-    font-weight: bold;
-  }
-  .hero .hero__text .hero__btns {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .projects .projects-main-title {
+    text-align: center;
     padding: 1rem;
   }
-  .hero .hero__text .hero__btns button {
-    font-size: 1.5rem;
+  .projects h1 {
+    color: rgba(3, 3, 3, 0.722);
+    text-align: center;
+  }
+  .contact {
     padding: 1rem;
-    border-radius: 25px;
-    background-color: rgba(0, 0, 0, 0.755);
-    color: ghostwhite;
-    border: 0;
   }
-  .hero .hero__text .hero__links {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  .hero .hero__text .hero__links i {
-    font-size: 2rem;
+  .contact .contact-container {
+    padding: 1rem;
+    text-align: center;
   }
 }/*# sourceMappingURL=styles.css.map */
