--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -176,7 +176,9 @@ $specialColor: rgba(3, 3, 3, 0.722);
             justify-content: center;
 
             img {
-                border-radius: 25%;
+                width: 120px;
+                height: 200px;
+                border-radius: 25px;
             }
         }
 
@@ -381,209 +383,50 @@ $specialColor: rgba(3, 3, 3, 0.722);
             }
         }
     }
-}
 
+    // Projects section (small and medium)
+    .projects {
+        padding: 1rem;
+        .projects-main-title {
+            text-align: center;
+            padding: 1rem;
+            h4 {
 
-
-
-
-
-// medium 
-@media (width <= 375px) {
-    // Navbar
-    .nav__container {
-        display: flex;
-        justify-content: space-around;
-        font-size: 1rem;
-        // margin-top: 1rem;
-
-        ul {
-            gap: 0.5rem;
-        }
-
-    }
-
-    // Home Page (medium mobile)
-    .hero {
-        display: flex;
-        flex-direction: column;
-        margin-top: 4rem;
-        gap: 1rem;
-
-        .hero__img {
-            display: flex;
-            justify-content: center;
-
-            img {
-                width: 120px;
-                height: 150px;
-                border-radius: 25%;
             }
-        }
-
-        .hero__text {
-            // border: 2px solid red;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            p, h2, h3 {
-                // border: 2px solid palegoldenrod;
-                display: flex;
-                justify-content: center;
-            }
-    
-            p {
-                font-size: 1.2rem;
-                
-            }
-    
             h2 {
-                font-size: 2.5rem;
-                font-weight: bold;
+
             }
-    
-            p, h3 {
-                color: rgba(0, 0, 0, 0.607);
-                font-weight: bold;
-            }
+        }
 
-            .hero__btns {
-                // border: 2px solid green;
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-                padding: 1rem;
-                
-                button {
-                    font-size: 1.5rem;
-                    padding: 1rem;
-                    border-radius: 25px;
-                    background-color: rgba(0, 0, 0, 0.755);
-                    color: ghostwhite;
-                    border: 0;
-                }
-
-            } 
-
-            .hero__links {
-                display: flex;
-                justify-content: center;
-                gap: 1rem;
-    
-                i {
-                    font-size: 2rem; 
-                }
-            }
-
+        h1 {
+            color: $specialColor;
+            text-align: center;
         }
     }
 
-
+    // Contact section (small and medium)
+    .contact {
+        padding: 1rem;
+        .contact-container {
+            padding: 1rem;
+            text-align: center;
+            h4 {}
+            h2 {}
+        }
+    }
 }
+
+
 
 
 
 //Large screens
-
-
 @media (width <= 425px) {
-    // Navbar
-    .nav__container {
-        font-size: 1.5rem;
-        // margin-top: 1rem;
-
-        ul {
-            gap: 0.5rem;
-        }
-
-    }
-
-    // Home Page (large mobile)
-    .hero {
-        display: flex;
-        flex-direction: column;
-        margin-top: 4rem;
-        gap: 1rem;
-
-        .hero__img {
-            display: flex;
-            justify-content: center;
-
-            img {
-                width: 120px;
-                height: 120px;
-                border-radius: 25%;
-            }
-        }
-
-        .hero__text {
-            // border: 2px solid red;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            p, h2, h3 {
-                // border: 2px solid palegoldenrod;
-                display: flex;
-                justify-content: center;
-            }
-    
-            p {
-                font-size: 1.2rem;
-                
-            }
-    
-            h2 {
-                font-size: 2.5rem;
-                font-weight: bold;
-            }
-    
-            p, h3 {
-                color: rgba(0, 0, 0, 0.607);
-                font-weight: bold;
-            }
-
-            .hero__btns {
-                // border: 2px solid green;
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-                padding: 1rem;
-                
-                button {
-                    font-size: 1.5rem;
-                    padding: 1rem;
-                    border-radius: 25px;
-                    background-color: rgba(0, 0, 0, 0.755);
-                    color: ghostwhite;
-                    border: 0;
-                }
-
-            } 
-
-            .hero__links {
-                display: flex;
-                justify-content: center;
-                gap: 1rem;
-    
-                i {
-                    font-size: 2rem; 
-                }
-            }
-
-        }
-    }
-
-    // About page (large mobile)
-
-    
 
 }
 
 
-
-
-
- // Tablets 
+// Tablets 
  @media (width <= 768px) {
 
 }
