--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,6 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 button {
@@ -37,33 +36,31 @@ button {
 
 .hero {
   margin-top: 4rem;
+  border: 2px solid blue;
+  max-width: 100%;
+  min-width: 100%;
+  margin-inline: auto;
   display: flex;
   justify-content: space-around;
   gap: 3rem;
 }
-.hero img {
+.hero .hero__img img {
   width: 220px;
   height: 300px;
   border-radius: 25%;
+  max-width: 100%;
 }
 .hero .hero__text {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
-}
-.hero .hero__text p, .hero .hero__text h2, .hero .hero__text h3 {
-  display: flex;
-  justify-content: center;
 }
 .hero .hero__text p {
   font-size: 1.2rem;
 }
 .hero .hero__text h2 {
   font-size: 2.5rem;
-  font-weight: bold;
-}
-.hero .hero__text p, .hero .hero__text h3 {
-  color: rgba(0, 0, 0, 0.607);
   font-weight: bold;
 }
 .hero .hero__text .hero__btns {
@@ -90,7 +87,25 @@ button {
   font-size: 2rem;
 }
 
-@media (width <= 320px) {
+/*
+    max-width: 100%;
+    min-width: 100%;
+    margin-inline: auto;
+*/
+.about .about-container .education-xp-container .image img {
+  border-radius: 25px;
+}
+.about .about-container .education-xp-container .items .text {
+  text-align: center;
+}
+.about .about-container .education-xp-container .items .writing-btn {
+  text-align: center;
+}
+.about .about-container .education-xp-container .items .writing-btn button:hover {
+  opacity: 0.7;
+}
+
+@media (width <= 375px) {
   /*
   Hamburger menu for mobile
   */
@@ -117,23 +132,27 @@ button {
     flex-direction: column;
     gap: 1rem;
   }
-  .hero .hero__text p, .hero .hero__text h2, .hero .hero__text h3 {
-    display: flex;
-    font-size: 1rem;
+  .hero .hero__text h3 {
+    font-size: 0.8rem;
   }
   .hero .hero__text p {
     font-size: 1.2rem;
   }
   .hero .hero__text h2 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: bold;
   }
   .hero .hero__text p, .hero .hero__text h3 {
     color: rgba(0, 0, 0, 0.607);
     font-weight: bold;
   }
+  .hero .hero__text .hero__btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .hero .hero__text .hero__btns button {
-    font-size: 1.5rem;
+    font-size: 0.8rem;
     padding: 1rem;
     border-radius: 25px;
     background-color: rgba(0, 0, 0, 0.755);
@@ -223,9 +242,6 @@ button {
     background-color: rgba(0, 0, 0, 0.755);
     color: ghostwhite;
     border: 0;
-  }
-  .about .about-container .education-xp-container .items .writing-btn button:hover {
-    opacity: 0.7;
   }
   .xp .xp-title {
     text-align: center;
