--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,13 +36,6 @@ button {
 
 .hero {
   margin-top: 4rem;
-  border: 2px solid blue;
-  max-width: 100%;
-  min-width: 100%;
-  margin-inline: auto;
-  display: flex;
-  justify-content: space-around;
-  gap: 3rem;
 }
 .hero .hero__img img {
   width: 220px;
@@ -87,11 +80,6 @@ button {
   font-size: 2rem;
 }
 
-/*
-    max-width: 100%;
-    min-width: 100%;
-    margin-inline: auto;
-*/
 .about .about-container .education-xp-container .image img {
   border-radius: 25px;
 }
@@ -105,17 +93,23 @@ button {
   opacity: 0.7;
 }
 
-@media (width <= 375px) {
-  /*
-  Hamburger menu for mobile
-  */
+.xp .xp-title h4, .xp .xp-title h2 {
+  text-align: center;
+}
+.xp .experience-container {
+  text-align: center;
+}
+.xp .experience-container .frontend-dev, .xp .experience-container .backend-dev {
+  border: 2px solid black;
+  border-radius: 25px;
+}
+@media (width <= 425px) {
   .nav__container {
     display: none;
   }
   .hero {
     display: flex;
     flex-direction: column;
-    margin-top: 2rem;
     gap: 1rem;
   }
   .hero .hero__img {
@@ -150,6 +144,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
   }
   .hero .hero__text .hero__btns button {
     font-size: 0.8rem;
@@ -166,9 +161,6 @@ button {
   }
   .hero .hero__text .hero__links i {
     font-size: 2rem;
-  }
-  .about {
-    display: flex;
   }
   .about .about-container {
     padding-top: 3rem;
@@ -243,33 +235,22 @@ button {
     color: ghostwhite;
     border: 0;
   }
-  .xp .xp-title {
+  .xp .xp-title h4, .xp .xp-title h2 {
     text-align: center;
-    padding: 1rem;
   }
-  .xp .xp-title h4, .xp .xp-title h3 {
-    color: rgba(3, 3, 3, 0.722);
-  }
-  .xp .xp-container {
+  .xp .experience-container {
     text-align: center;
-    border: 2px solid rgba(3, 3, 3, 0.722);
+  }
+  .xp .experience-container .frontend-dev, .xp .experience-container .backend-dev {
+    border: 2px solid black;
     border-radius: 25px;
   }
-  .xp .xp-container .xp-type {
-    padding: 1rem;
-    font-weight: bold;
+  .xp .experience-container .frontend-dev .skill-container, .xp .experience-container .backend-dev .skill-container {
+    padding: 0.7rem;
   }
-  .xp .xp-container .xp-skills-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .xp .xp-container .xp-skills-container .skill-container h3 {
-    font-weight: bold;
-    color: rgba(3, 3, 3, 0.722);
-  }
-  .xp .xp-container .xp-skills-container .skill-container h4 {
-    font-style: italic;
+  .xp .experience-container .backend-dev {
+    border: 2px solid black;
+    border-radius: 25px;
   }
   .projects {
     padding: 1rem;
@@ -288,5 +269,175 @@ button {
   .contact .contact-container {
     padding: 1rem;
     text-align: center;
+  }
+  .contact .contact-container .image-container img {
+    width: 200px;
+    height: 350px;
+    border-radius: 25px;
+  }
+}
+@media (width <= 768px) {
+  .hero {
+    display: flex;
+  }
+  .hero .hero__img {
+    display: flex;
+    justify-content: center;
+  }
+  .hero .hero__img img {
+    width: 170px;
+    height: 250px;
+    border-radius: 25px;
+  }
+  .hero .hero__text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .hero .hero__text h3 {
+    font-size: 1.5rem;
+  }
+  .hero .hero__text p {
+    font-size: 1.8rem;
+  }
+  .hero .hero__text h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  .hero .hero__text p, .hero .hero__text h3 {
+    color: rgba(0, 0, 0, 0.607);
+    font-weight: bold;
+  }
+  .hero .hero__text .hero__btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero .hero__text .hero__btns button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+  }
+  .hero .hero__text .hero__links {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  .hero .hero__text .hero__links i {
+    font-size: 2rem;
+  }
+  .about {
+    margin-top: 5rem;
+  }
+  .about .heading {
+    text-align: center;
+  }
+  .about .heading h2 {
+    font-size: 3rem;
+  }
+  .about .about-container .education-xp-container {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+  }
+  .about .about-container .education-xp-container .image img {
+    border-radius: 25px;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper {
+    display: flex;
+    justify-content: space-around;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .education {
+    border: 2px solid rgba(3, 3, 3, 0.722);
+    font-size: 2rem;
+    padding: 1.2rem;
+    border-radius: 25px;
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: column;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .education h4 {
+    display: flex;
+    justify-content: center;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .education span {
+    text-align: center;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .experience {
+    border: 2px solid rgba(3, 3, 3, 0.722);
+    padding: 1.2rem;
+    font-size: 2rem;
+    border-radius: 25px;
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: column;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .experience h4 {
+    display: flex;
+    justify-content: center;
+  }
+  .about .about-container .education-xp-container .items .item-wrapper .experience span {
+    display: flex;
+    justify-content: center;
+  }
+  .about .about-container .education-xp-container .items .text {
+    text-align: center;
+    padding-top: 1rem;
+    font-size: 2rem;
+  }
+  .about .about-container .education-xp-container .items .writing-btn {
+    text-align: center;
+    padding: 1rem;
+  }
+  .about .about-container .education-xp-container .items .writing-btn button {
+    font-size: 2rem;
+    padding: 1rem;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0.755);
+    color: ghostwhite;
+    border: 0;
+  }
+  .xp .xp-title h4, .xp .xp-title h2 {
+    text-align: center;
+  }
+  .xp .experience-container {
+    text-align: center;
+  }
+  .xp .experience-container .frontend-dev, .xp .experience-container .backend-dev {
+    border: 2px solid black;
+    border-radius: 25px;
+  }
+  .xp .experience-container .frontend-dev .skill-container, .xp .experience-container .backend-dev .skill-container {
+    padding: 0.7rem;
+  }
+  .xp .experience-container .backend-dev {
+    border: 2px solid black;
+    border-radius: 25px;
+  }
+  .projects {
+    padding: 1rem;
+  }
+  .projects .projects-main-title {
+    text-align: center;
+    padding: 1rem;
+  }
+  .projects h1 {
+    color: rgba(3, 3, 3, 0.722);
+    text-align: center;
+  }
+  .contact {
+    padding: 1rem;
+  }
+  .contact .contact-container {
+    padding: 1rem;
+    text-align: center;
+  }
+  .contact .contact-container .image-container img {
+    width: 200px;
+    height: 350px;
+    border-radius: 25px;
   }
 }/*# sourceMappingURL=styles.css.map */
