--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,7 +11,6 @@
     font-family: 'Quattrocento Sans', sans-serif;
     text-decoration: none;
     color: rgb(0,0,0);
-
    
 }
 
@@ -75,16 +74,14 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
 }
 
-// Home Page
+// Home Page - default
+
 .hero {
     margin-top: 4rem;
-    border: 2px solid blue;
-    max-width: 100%;
-    min-width: 100%;
-    margin-inline: auto;
-    display: flex;
-    justify-content: space-around;
-    gap: 3rem;
+    //border: 2px solid blue;
+    // display: flex;
+    // justify-content: space-around;
+
 
     .hero__img {
         img {
@@ -139,15 +136,6 @@ $specialColor: rgba(3, 3, 3, 0.722);
 }
 
 
-
-
-
-// About container
-/*
-    max-width: 100%;
-    min-width: 100%;
-    margin-inline: auto;
-*/
 .about {
     .about-container {
         .heading {
@@ -230,6 +218,33 @@ $specialColor: rgba(3, 3, 3, 0.722);
     }
 }
 
+.xp {
+    .xp-title {
+        h4, h2 {
+            text-align: center;
+        }
+        
+    }
+
+    .experience-container {
+        text-align: center;
+        .frontend-dev, .backend-dev {
+            border: 2px solid black;
+            border-radius: 25px;
+            h4{
+
+            }
+            .skill-container {
+                .skill-name {
+                    h4 {
+                        
+                    }
+                }
+            }
+        }
+    }
+}
+
 
 
 
@@ -243,21 +258,18 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
 // Media Queries
 
-// small and medium
-@media (width <= 375px) {
-    // Navbar (small and medium)
-    /*
-    Hamburger menu for mobile
-    */
+// small and medium and large mobile screens
+@media (width <= 425px) {
     .nav__container {
         display: none;
     }
 
     // Home Page (small and medium)
     .hero {
+        //border: 2px solid red;
         display: flex;
         flex-direction: column;
-        margin-top: 2rem;
+        //padding-bottom: 1.5rem;
         gap: 1rem;
 
         .hero__img {
@@ -299,6 +311,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
             .hero__btns {
                 // border: 2px solid green;
                 @include divCentered();
+                flex-wrap: wrap;
                 button {
                     font-size: 0.8rem;
                     padding: 1rem;
@@ -323,9 +336,9 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
-    // About section (small and medium)
+    // About section (small and medium and large)
     .about {
-        display: flex;
+        //display: flex;
         //padding: 0.5rem;
         .about-container {
             //border: 4px solid red;
@@ -426,48 +439,62 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
-    // Experience section (small and medium)
+    // Experience section (small and medium and large)
     .xp {
-        //border: 2px solid red;
         .xp-title {
-            text-align: center;
-            //border: 2px solid purple;
-            padding: 1rem;
-            h4, h3 {
-                color: $specialColor;
+            h4, h2 {
+                text-align: center;
             }
-            h3 {
-
-            }
+            
         }
-        .xp-container {
+    
+        .experience-container {
             text-align: center;
-            border: 2px solid $specialColor;
-            border-radius: 25px;
-            .xp-type{
-                padding: 1rem;
-                font-weight: bold;
-            }
-            .xp-skills-container {
-                //border: 2px solid red;
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
+            .frontend-dev, .backend-dev {
+                border: 2px solid black;
+                border-radius: 25px;
+                h4{
+                    
+                }
                 .skill-container {
-                    //border: 2px solid green;
-                    h3 {
-                        font-weight: bold;
-                        color: $specialColor;
+                    padding: 0.7rem;
+                    .skill-name {
+                        h4 {
+                            
+                        }
                     }
-                    h4 {
-                        font-style: italic;
+
+                    .skill-level {
+
                     }
                 }
             }
+
+            .backend-dev {
+                border: 2px solid black;
+                border-radius: 25px;
+                h4{
+                    
+                }
+                .skill-container {
+                    .skill-name {
+                        h4 {
+    
+                        }
+                    }
+
+                    .skill-level {
+                        
+                    }
+                }
+
+
+            }
+
         }
     }
 
-    // Projects section (small and medium)
+    // Projects section (small and medium and large)
     .projects {
         padding: 1rem;
         .projects-main-title {
@@ -487,7 +514,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
-    // Contact section (small and medium)
+    // Contact section (small and medium and large)
     .contact {
         padding: 1rem;
         .contact-container {
@@ -495,6 +522,14 @@ $specialColor: rgba(3, 3, 3, 0.722);
             text-align: center;
             h4 {}
             h2 {}
+            .image-container {
+                //border: 2px solid red;
+                img {
+                    width: 200px;
+                    height: 350px;
+                    border-radius: 25px;
+                }
+            }
         }
     }
 }
@@ -502,14 +537,295 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
 
 
-
-//Large screens
-@media (width <= 425px) {
-
-}
-
-
 // Tablets 
  @media (width <= 768px) {
+    .nav__container {
+        p {
+
+        }
+        // ul has a default flex display as specified in earlier code above
+        ul {
+            // li placed before a for easy readability
+            li {
+                
+            }
+            a {
+
+            }
+
+        }
+    }
+
+    // Home Page (tablets)
+    .hero {
+        //border: 2px solid red;
+        display: flex;
+
+        .hero__img {
+            display: flex;
+            justify-content: center;
+
+            img {
+                width: 170px;
+                height: 250px;
+                border-radius: 25px;
+            }
+        }
+
+
+        .hero__text {
+            // border: 2px solid red;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            h3 {
+                font-size: 1.5rem;
+            }
+    
+            p {
+                font-size: 1.8rem;
+                
+            }
+    
+            h2 {
+                font-size: 1.5rem;
+                font-weight: bold;
+            }
+    
+            p, h3 {
+                color: rgba(0, 0, 0, 0.607);
+                font-weight: bold;
+            }
+
+            .hero__btns {
+                // border: 2px solid green;
+                @include divCentered();
+                button {
+                    font-size: 1.5rem;
+                    padding: 1rem;
+                    border-radius: 25px;
+                    background-color: rgba(0, 0, 0, 0.755);
+                    color: ghostwhite;
+                    border: 0;
+                }
+
+            } 
+
+            .hero__links {
+                display: flex;
+                justify-content: center;
+                gap: 1.5rem;
+    
+                i {
+                    font-size: 2rem; 
+                }
+            }
+
+        }
+    }
+
+    // About section (tablets)
+    .about {
+        //border: 2px solid red;
+        margin-top: 5rem;
+        .heading {
+            text-align: center;
+            //padding: 0.2rem;
+            h2 {
+                font-size: 3rem;
+            }
+        }
+        .about-container {
+            //border: 2px solid blue;
+
+            .education-xp-container {
+                //border:2px solid blue;
+                padding: 1rem;
+                display: flex;
+                justify-content: space-around;
+                .image {
+                    // display: flex;
+                    // justify-content: center;
+                    // padding: 1rem;
+                    
+                    img {
+                        border-radius: 25px;
+                    }
+                }
+
+                .items {
+                    
+                    .item-wrapper {
+                        display: flex;
+                        justify-content: space-around;
+                        .education {
+                            border:2px solid $specialColor;
+                            font-size: 2rem;
+                            padding: 1.2rem;
+                            border-radius: 25px;
+                            display: flex;
+                            flex-flow: wrap;
+                            flex-direction: column;
+                            h4 {
+                                display: flex;
+                                justify-content: center;
+                            }
+
+                            span {
+                                text-align: center;
+                            }
+
+                            h5 {
+
+                            }
+                        }
+                        .experience {
+                            border: 2px solid $specialColor;
+                            padding: 1.2rem;
+                            font-size: 2rem;
+                            border-radius: 25px;
+                            display: flex;
+                            flex-flow: wrap;
+                            flex-direction: column;
+                            h4 {
+                                display: flex;
+                                justify-content: center;
+                            }
+
+                            span {
+                                display: flex;
+                                justify-content: center;
+                            }
+
+                            h5 {
+                                
+                            }
+                        }
+                    }
+                    .text {
+                        text-align: center;
+                        padding-top: 1rem;
+                        font-size: 2rem;
+                    }
+
+                    .writing-btn {
+                        text-align: center;
+                        padding: 1rem;
+                        button {
+                            font-size: 2rem;
+                            padding: 1rem;
+                            border-radius: 25px;
+                            background-color: rgba(0, 0, 0, 0.755);
+                            color: ghostwhite;
+                            border: 0;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    //TODO: Fix this section to fit tablets
+    // Experience section (tablets)
+    .xp {
+        .xp-title {
+            h4, h2 {
+                text-align: center;
+            }
+            
+        }
+    
+        .experience-container {
+            text-align: center;
+            .frontend-dev, .backend-dev {
+                border: 2px solid black;
+                border-radius: 25px;
+                h4{
+                    
+                }
+                .skill-container {
+                    padding: 0.7rem;
+                    .skill-name {
+                        h4 {
+                            
+                        }
+                    }
+
+                    .skill-level {
+
+                    }
+                }
+            }
+
+            .backend-dev {
+                border: 2px solid black;
+                border-radius: 25px;
+                h4{
+                    
+                }
+                .skill-container {
+                    .skill-name {
+                        h4 {
+    
+                        }
+                    }
+
+                    .skill-level {
+                        
+                    }
+                }
+
+
+            }
+
+        }
+    }
+
+    // Projects section (tablets)
+    .projects {
+        padding: 1rem;
+        .projects-main-title {
+            text-align: center;
+            padding: 1rem;
+            h4 {
+
+            }
+            h2 {
+
+            }
+        }
+
+        h1 {
+            color: $specialColor;
+            text-align: center;
+        }
+    }
+
+    // Contact section (tablets)
+    .contact {
+        padding: 1rem;
+        .contact-container {
+            padding: 1rem;
+            text-align: center;
+            h4 {}
+            h2 {}
+            .image-container {
+                //border: 2px solid red;
+                img {
+                    width: 200px;
+                    height: 350px;
+                    border-radius: 25px;
+                }
+            }
+        }
+    }
+
 
 }
+
+
+
+
+// Laptops
+
+// Large laptops
