--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -53,7 +53,6 @@ $specialColor: rgba(3, 3, 3, 0.722);
     // border-bottom: 2px solid black;
     display: flex;
     justify-content: space-around;
-    font-size: $titleFont;
     margin-top: 2rem;
 
     p {
@@ -65,6 +64,8 @@ $specialColor: rgba(3, 3, 3, 0.722);
         list-style: none;
 
         li {
+            display: flex;
+            justify-content: space-around;
             &:hover{
                 text-decoration: underline;
                 transition: all 0.4s ease-in-out;
@@ -218,32 +219,6 @@ $specialColor: rgba(3, 3, 3, 0.722);
     }
 }
 
-.xp {
-    .xp-title {
-        h4, h2 {
-            text-align: center;
-        }
-        
-    }
-
-    .experience-container {
-        text-align: center;
-        .frontend-dev, .backend-dev {
-            border: 2px solid black;
-            border-radius: 25px;
-            h4{
-
-            }
-            .skill-container {
-                .skill-name {
-                    h4 {
-                        
-                    }
-                }
-            }
-        }
-    }
-}
 
 
 
@@ -259,7 +234,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
 // Media Queries
 
 // small and medium and large mobile screens
-@media (width <= 425px) {
+@media (width >= 320px) {
     .nav__container {
         display: none;
     }
@@ -290,11 +265,11 @@ $specialColor: rgba(3, 3, 3, 0.722);
             flex-direction: column;
             gap: 1rem;
             h3 {
-                font-size: 0.8rem;
+                font-size: 1.5rem;
             }
     
             p {
-                font-size: 1.2rem;
+                font-size: 1.5rem;
                 
             }
     
@@ -313,7 +288,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
                 @include divCentered();
                 flex-wrap: wrap;
                 button {
-                    font-size: 0.8rem;
+                    font-size: 1.2rem;
                     padding: 1rem;
                     border-radius: 25px;
                     background-color: rgba(0, 0, 0, 0.755);
@@ -348,7 +323,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
                 justify-content: center;
                 //padding: 0.2rem;
                 h2 {
-
+                    font-size: 2rem;
                 }
             }
 
@@ -384,14 +359,16 @@ $specialColor: rgba(3, 3, 3, 0.722);
                             h4 {
                                 display: flex;
                                 justify-content: center;
+                                font-size: 1.6rem;
                             }
 
                             span {
                                 text-align: center;
-                            }
+                                font-size: 1.6rem;
+                            }   
 
                             h5 {
-
+                                
                             }
                         }
                         .experience {
@@ -402,14 +379,10 @@ $specialColor: rgba(3, 3, 3, 0.722);
                             display: flex;
                             flex-flow: wrap;
                             flex-direction: column;
-                            h4 {
+                            h4, span {
                                 display: flex;
                                 justify-content: center;
-                            }
-
-                            span {
-                                display: flex;
-                                justify-content: center;
+                                font-size: 1.6rem;
                             }
 
                             h5 {
@@ -420,13 +393,14 @@ $specialColor: rgba(3, 3, 3, 0.722);
                     .text {
                         text-align: center;
                         padding-top: 1rem;
+                        font-size: 1.6rem;
                     }
 
                     .writing-btn {
                         text-align: center;
                         padding: 1rem;
                         button {
-                            font-size: 1rem;
+                            font-size: 1.6rem;
                             padding: 1rem;
                             border-radius: 25px;
                             background-color: rgba(0, 0, 0, 0.755);
@@ -440,71 +414,24 @@ $specialColor: rgba(3, 3, 3, 0.722);
     }
 
     // Experience section (small and medium and large)
-    .xp {
-        .xp-title {
-            h4, h2 {
-                text-align: center;
-            }
-            
-        }
-    
+    .experience {
         .experience-container {
-            text-align: center;
-            .frontend-dev, .backend-dev {
-                border: 2px solid black;
-                border-radius: 25px;
-                h4{
-                    
-                }
-                .skill-container {
-                    padding: 0.7rem;
-                    .skill-name {
-                        h4 {
-                            
-                        }
-                    }
-
-                    .skill-level {
-
-                    }
-                }
-            }
-
-            .backend-dev {
-                border: 2px solid black;
-                border-radius: 25px;
-                h4{
-                    
-                }
-                .skill-container {
-                    .skill-name {
-                        h4 {
-    
-                        }
-                    }
-
-                    .skill-level {
-                        
-                    }
-                }
-
-
-            }
-
+            
         }
     }
 
     // Projects section (small and medium and large)
+    // Projects section (tablets)
     .projects {
         padding: 1rem;
         .projects-main-title {
             text-align: center;
             padding: 1rem;
             h4 {
-
+                font-size: 1.6rem;
             }
             h2 {
-
+                font-size: 1.3rem;
             }
         }
 
@@ -538,16 +465,20 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
 
 // Tablets 
- @media (width <= 768px) {
+ @media (width >= 768px) {
     .nav__container {
+        font-size: $titleFont;
+    
         p {
 
         }
         // ul has a default flex display as specified in earlier code above
         ul {
+            gap: 2rem;
+            
             // li placed before a for easy readability
             li {
-                
+
             }
             a {
 
@@ -560,7 +491,8 @@ $specialColor: rgba(3, 3, 3, 0.722);
     .hero {
         //border: 2px solid red;
         display: flex;
-
+        justify-content: center;
+        gap: 2rem;
         .hero__img {
             display: flex;
             justify-content: center;
@@ -601,7 +533,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
                 // border: 2px solid green;
                 @include divCentered();
                 button {
-                    font-size: 1.5rem;
+                    font-size: 1.8rem;
                     padding: 1rem;
                     border-radius: 25px;
                     background-color: rgba(0, 0, 0, 0.755);
@@ -626,7 +558,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
     // About section (tablets)
     .about {
-        //border: 2px solid red;
+        padding: 2rem;
         margin-top: 5rem;
         .heading {
             text-align: center;
@@ -643,6 +575,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
                 padding: 1rem;
                 display: flex;
                 justify-content: space-around;
+                gap: 2rem;
                 .image {
                     // display: flex;
                     // justify-content: center;
@@ -658,6 +591,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
                     .item-wrapper {
                         display: flex;
                         justify-content: space-around;
+                        gap: 2rem;
                         .education {
                             border:2px solid $specialColor;
                             font-size: 2rem;
@@ -727,59 +661,7 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
     //TODO: Fix this section to fit tablets
     // Experience section (tablets)
-    .xp {
-        .xp-title {
-            h4, h2 {
-                text-align: center;
-            }
-            
-        }
-    
-        .experience-container {
-            text-align: center;
-            .frontend-dev, .backend-dev {
-                border: 2px solid black;
-                border-radius: 25px;
-                h4{
-                    
-                }
-                .skill-container {
-                    padding: 0.7rem;
-                    .skill-name {
-                        h4 {
-                            
-                        }
-                    }
 
-                    .skill-level {
-
-                    }
-                }
-            }
-
-            .backend-dev {
-                border: 2px solid black;
-                border-radius: 25px;
-                h4{
-                    
-                }
-                .skill-container {
-                    .skill-name {
-                        h4 {
-    
-                        }
-                    }
-
-                    .skill-level {
-                        
-                    }
-                }
-
-
-            }
-
-        }
-    }
 
     // Projects section (tablets)
     .projects {
@@ -788,10 +670,10 @@ $specialColor: rgba(3, 3, 3, 0.722);
             text-align: center;
             padding: 1rem;
             h4 {
-
+                font-size: 3rem;
             }
             h2 {
-
+                font-size: 2rem;
             }
         }
 
@@ -801,24 +683,6 @@ $specialColor: rgba(3, 3, 3, 0.722);
         }
     }
 
-    // Contact section (tablets)
-    .contact {
-        padding: 1rem;
-        .contact-container {
-            padding: 1rem;
-            text-align: center;
-            h4 {}
-            h2 {}
-            .image-container {
-                //border: 2px solid red;
-                img {
-                    width: 200px;
-                    height: 350px;
-                    border-radius: 25px;
-                }
-            }
-        }
-    }
 
 
 }
@@ -827,5 +691,8 @@ $specialColor: rgba(3, 3, 3, 0.722);
 
 
 // Laptops
+@media (width <= 1024px) {
 
-// Large laptops
+}
+
+// Large laptops (1440px)
